Adding blast label

--- a/configs/ceres/ceres.cfg
+++ b/configs/ceres/ceres.cfg
@@ -40,6 +40,13 @@ process {
         queue  = 'brief-low'
     }
 
+    withLabel: blast {   
+        cpus   = { check_max( 16                  , 'cpus'    ) }
+        memory = { check_max( 30.GB * task.attempt, 'memory'  ) }
+        time   = 72.h
+        queue  = 'medium'
+    }
+
     withLabel: verylow {   
         cpus   = { check_max( 2                  , 'cpus'    ) }
         memory = { check_max( 8.GB * task.attempt, 'memory'  ) }
