Fixing mcscanx args

--- a/nextflow.config
+++ b/nextflow.config
@@ -16,7 +16,7 @@ params.e_value                  = '1e-05'
 params.match_score              = '50'
 params.gap_penalty              = '-1'
 params.max_gaps                 = '20'
-params.aerage_intergenic_dis    = '10000'
+params.window_overlap           = '5'
 params.fasta_minlen             = '50000'
 
 params.project_name = 'Template'
