Fixing balst evalue

--- a/nextflow.config
+++ b/nextflow.config
@@ -12,12 +12,13 @@ params.max_time                   = '24.h'
 // Required Pipeline Config Settings
 params.block_pattern            = '2'
 params.match_size               = '5'
-params.e_value                  = '1e-05'
+params.mcscanx_e_value          = '1e-05'
 params.match_score              = '50'
 params.gap_penalty              = '-1'
 params.max_gaps                 = '20'
 params.window_overlap           = '5'
 params.fasta_minlen             = '50000'
+params.diamond_e_value          = '1e-05'
 
 params.project_name = 'Template'
 params.sample_sheet = '/path/to/samplesheet.csv'
