--- a/configs/ceres/ceres.cfg
+++ b/configs/ceres/ceres.cfg
@@ -43,8 +43,8 @@ process {
     withLabel: blast {   
         cpus   = { check_max( 16                  , 'cpus'    ) }
         memory = { check_max( 30.GB * task.attempt, 'memory'  ) }
-        time   = 72.h
-        queue  = 'medium'
+        time   = 2.h
+        queue  = 'short'
     }
 
     withLabel: verylow {   
