Adding QC Modules and MultiQC

--- a/nextflow.config
+++ b/nextflow.config
@@ -19,6 +19,7 @@ params.max_gaps                 = '20'
 params.window_overlap           = '5'
 params.fasta_minlen             = '50000'
 params.diamond_e_value          = '1e-05'
+params.busco_lineage            = 'diptera_odb12'
 
 params.project_name = 'Template'
 params.sample_sheet = '/path/to/samplesheet.csv'
