--- a/configs/ceres/ceres.cfg
+++ b/configs/ceres/ceres.cfg
@@ -41,10 +41,10 @@ process {
     }
 
     withLabel: blast {   
-        cpus   = { check_max( 16                  , 'cpus'    ) }
-        memory = { check_max( 30.GB * task.attempt, 'memory'  ) }
+        cpus   = { check_max( 4                  , 'cpus'    ) }
+        memory = { check_max( 6.GB * task.attempt, 'memory'  ) }
         time   = 2.h
-        queue  = 'short'
+        queue  = 'brief-low'
     }
 
     withLabel: verylow {   
