Adding diamond all

--- a/configs/ceres/ceres.cfg
+++ b/configs/ceres/ceres.cfg
@@ -47,6 +47,13 @@ process {
         queue  = 'brief-low'
     }
 
+    withLabel: orthofinder {   
+        cpus   = { check_max( 32                  , 'cpus'    ) }
+        memory = { check_max( 200.GB * task.attempt, 'memory'  ) }
+        time   = 2.h
+        queue  = 'medium'
+    }
+
     withLabel: verylow {   
         cpus   = { check_max( 2                  , 'cpus'    ) }
         memory = { check_max( 8.GB * task.attempt, 'memory'  ) }
