--- a/configs/ceres/ceres.cfg
+++ b/configs/ceres/ceres.cfg
@@ -47,6 +47,14 @@ process {
         queue  = 'brief-low'
     }
 
+    withLabel: mcscanx {   
+        cpus   = { check_max( 16                  , 'cpus'    ) }
+        memory = { check_max( 50.GB * task.attempt, 'memory'  ) }
+        time   = 24.h
+        queue  = 'short'
+    }
+
+
     withLabel: orthofinder {   
         cpus   = { check_max( 32                  , 'cpus'    ) }
         memory = { check_max( 200.GB * task.attempt, 'memory'  ) }
