--- a/configs/ceres/ceres.cfg
+++ b/configs/ceres/ceres.cfg
@@ -75,6 +75,13 @@ process {
         queue  = 'long'
     }
 
+    withLabel: mcscanx {   
+        cpus   = { check_max( 1                 , 'cpus'    ) }
+        memory = { check_max( 16.GB * task.attempt, 'memory'  ) }
+        time   = 168.h
+        queue  = 'medium'
+    }
+
     withLabel: kracken2 {   
         cpus   = { check_max( 16                  , 'cpus'    ) }
         memory = { check_max( 30.GB * task.attempt, 'memory'  ) }
