--- a/configs/ceres/ceres.cfg
+++ b/configs/ceres/ceres.cfg
@@ -82,6 +82,13 @@ process {
         queue  = 'medium'
     }
 
+    withLabel: mcscanx_plex {   
+        cpus   = { check_max( 1                 , 'cpus'    ) }
+        memory = { check_max( 16.GB * task.attempt, 'memory'  ) }
+        time   = 2.h
+        queue  = 'short'
+    }
+
     withLabel: kracken2 {   
         cpus   = { check_max( 16                  , 'cpus'    ) }
         memory = { check_max( 30.GB * task.attempt, 'memory'  ) }
