--- a/configs/ceres/ceres.cfg
+++ b/configs/ceres/ceres.cfg
@@ -1,10 +1,10 @@
 // Profile config names for nf-core/configs
 params {
     config_profile_description = 'Ceres - USDA ARS'
-    config_profile_contact = 'David Molik'
+    config_profile_contact = 'Edward Bird'
     config_profile_url = 'https://github.com/edwardbirdlab'
     priority = null
-    clusterOptions='-N 1'
+    clusterOptions='-A musca'
     schema_ignore_params = "clusterOptions"
     validationSchemaIgnoreParams = "clusterOptions,schema_ignore_params"
 }
