--- a/configs/ceres/ceres.cfg
+++ b/configs/ceres/ceres.cfg
@@ -4,7 +4,7 @@ params {
     config_profile_contact = 'David Molik'
     config_profile_url = 'https://github.com/edwardbirdlab'
     priority = null
-    clusterOptions='-N 1'
+    clusterOptions='-A culicoides'
     schema_ignore_params = "clusterOptions"
     validationSchemaIgnoreParams = "clusterOptions,schema_ignore_params"
 }
